# Falskcraft

./: .gitmodules  CMakeLists.txt  README.md
res/: packer.py
src/: Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  log.hpp  main.cpp  shaders.hpp
